--- a/vite-project/src/components/Footer/Brand/style.css
+++ b/vite-project/src/components/Footer/Brand/style.css
@@ -13,8 +13,13 @@
 }
 
 .footer__tagline {
-  margin: 0;
   color: #6B7280;
   font-size: 20px;
   line-height: 1.5;
 }
+
+.footer__logo-link {
+  display: inline-block;
+  text-decoration: none;
+}
+
