--- a/vite-project/src/components/AppContainer/style.css
+++ b/vite-project/src/components/AppContainer/style.css
@@ -1,6 +1,6 @@
 .app {
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+ min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
