--- a/vite-project/src/components/Footer/Bottom/style.css
+++ b/vite-project/src/components/Footer/Bottom/style.css
@@ -11,10 +11,15 @@
   font-size: 16px;
 }
 
-.footer__credits a {
+.footer__link {
   color: #28C5C0;
   text-decoration: none;
 }
+
+.footer__link:hover {
+  text-decoration: underline;
+}
+
 
 .footer__social {
   display: flex;
