--- a/vite-project/src/components/Header/ThemeToggle/style.css
+++ b/vite-project/src/components/Header/ThemeToggle/style.css
@@ -8,7 +8,7 @@
   width: 50px;
   height: 50px;
   border-radius: 10px;
-  border: 1px solid var(--border);
+  border: var(--border);
   background: var(--surface);
   color: var(--text);
   cursor: pointer;
